change to reamspro docs

--- a/src/@rocketseat/gatsby-theme-docs/text/index.mdx
+++ b/src/@rocketseat/gatsby-theme-docs/text/index.mdx
@@ -1,23 +1,37 @@
-# Introduction
+---
+title: "REAMS INTRODUCTION"
+slug: "/tutorial/intro"
+date: "2021-03-23"
+description: "INTRODUCTION TO THE REAMSPRO SYSTEM"
+---
 
-Rocket Docs is a complete and awesome Gatsby Theme for documentation websites. We've
-developed it to be easy to use and customize. Forget about other
-things and focus on what matters: **writing docs.**
+## Overview of REAMSPRO
 
-## Features
+**REAMSPRO** is a property management and administration system built for real estate firms and professionals to drive efficiency and effectiveness via proper record management and keeping.
 
-- ⚛️ Ready for Gatsby v3;
-- 📝 MDX for docs;
-- 🛣 Yaml-based sidebar navigation;
-- 📱 Responsive and mobile friendly;
-- 🖥 Code highlighting with [prism-react-renderer](https://github.com/FormidableLabs/prism-react-renderer) and [react-live](https://github.com/FormidableLabs/react-live) support;
-- 🥇 SEO (Sitemap, schema.org data, Open Graph and Twitter tags).
-- 📈 Google Analytics support;
-- 📄 Custom docs schema;
-- 🖱 Table of Contents;
-- ⚡️ Offline Support & WebApp Manifest;
-- and much more 🔥
+Its functions seek to serve all the various levels of operations found in a real estate firm from the cashiers, field officers, property managers, accountants and finally operations management.
+
+It does this by modularizing the different levels of operations into features that together make up the **`REAMSPRO`** system.
+
+The modules include but are not limited to:
+
+- **1. Tenant Management**
+- **2. Landlord Management.**
+- **3. Billing and Invoicing.**
+- **4. Rent and Payment Processing.**
+- **5. Accounting.**
+- **6. Reporting.**
+- **7. Communication.**
+
+In addition to these features, **`REAMSPRO`** is:
+
+- **Web-based**: This means it is available to any user with an internet connection at any time and from anywhere.
+- **Scalable**: As the company scales and its operations change, **`REAMSPRO`** is able to adapt and handle the expanding workflow.
+- **Secure**: The data collected and stored by the system is securely stored only accessible by the authorized users.
+- **Support and maintenance**: The system is backed by dedicated support and maintenance personnel who are always on call for assistance.
+- **Clean user interface**: The system through menus, buttons and lists makes it easy to navigate and use.
+- **Dynamic**: With new developments in industry practice, **`REAMSPRO`** upgrades and integrates them for its users.
 
 <br />
 
-[Get started now!](/getting-started)
+[Get started now!](/notes/login)
